gateway-service: update cors config for api gateway